// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-visible"
    >
      Expenses
    </div>
    <div
      className="large-screen-visible"
    >
      Expense
    </div>
    <div
      className="large-screen-visible"
    >
      Amount
    </div>
  </div>
  <div
    className="list-item list-item--message"
  >
    <span>
      No expenses match query
    </span>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-visible"
    >
      Expenses
    </div>
    <div
      className="large-screen-visible"
    >
      Expense
    </div>
    <div
      className="large-screen-visible"
    >
      Amount
    </div>
  </div>
  <ExpenseListItem
    amount={195}
    createdAt={0}
    description="Gum"
    id="1"
    key="1"
    note=""
  />
  <ExpenseListItem
    amount={11195}
    createdAt={-345600000}
    description="Payment"
    id="2"
    key="2"
    note=""
  />
  <ExpenseListItem
    amount={1095}
    createdAt={345600000}
    description="Food"
    id="3"
    key="3"
    note=""
  />
</div>
`;
